fix: blurry background svg #31

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -326,7 +326,7 @@ body {
   color: #fff;
   border-radius: 0;
   background-image: url("/hero-background.svg");
-  background-size: cover;
+  background-size: 100% 100%;
 }
 
 @media (min-width: 992px) {
